For new Virtualmin installs, Apache logs are now stored under /var/log/virtualmin and just linked from the ~/logs directory. This avoids problems with Apache crashing when the logs directory is deleted.
The Disk Quota Monitoring page can now also be used to find mailboxes that are approaching or over their quota, and can send email to domain owners and individual mailboxes as well as the master admin.
Added a Module Config option to have down services automatically restarted by the regular status collection job.
Added a script installer for Horde Webmail, version 1.2.1.
Plugins can now export content styles, allowing multiple styles to be easily installed from a single separate plugin.
Directories containing initial files for virtual servers (like /etc/skel) are now included in Virtualmin template backups.
---- Changes since 3.65 ----
Added API commands to create, modify, delete and extract settings from virtual server templates.
Updated the phpMyAdmin script installer to version 3.1.2, TextPattern to 4.0.8, Magento to 1.2.0.3, Typo to 5.2, Moodle to 1.9.4 and 1.7.7, phpList to 2.10.9, SugarCRM to 5.2.0a, WordPress MU to 2.7, Horde Webmail to 1.2.2, and phpMyFAQ to 2.0.11.
Added the info.pl command line script, for dumping general information about Virtualmin.
Links to per-domain SpamAssassin configurations now include the domain's config file, which allows each domain's settings to be separately managed.
Automatic spam and virus folder clearing now respects custom folder names.
When a domain is restore on a system with a different Apache log file location, its virtualhost is updated to use the target system's paths.
Add parameters to the modify-dns.pl command-line API to add and remove DNS records for multiple domains at once.
Added the get-dns.pl command-line script to dump DNS records for a virtual server.
External web, DNS and mail connectivity for virtual servers can now be checked by Virtualmin, to diagnose common networking and configuration problems.