@@ -1,16 +1,0 @@
-<header>IP address for use in DNS records</header>
-
-By default, the DNS records automatically generated for this virtual server
-will contain the IP address that it is assigned by Virtualmin. However, in 
-some cases this address may not actually be the one you want web and mail
-clients on the Internet to connect to. <p>
-
-This can occur if your Virtualmin server is on an internal private network,
-and all HTTP traffic is forwarded to it via a firewall or proxy. In this case,
-it is the firewall's IP address that the DNS records should contain. When this
-option is set, the address entered will be used for all records that would
-normally contain the real address, such as <tt>www</tt>, <tt>mail</tt> and
-<tt>ftp</tt>. <p>
-
-<footer>
-
