@@ -918,6 +918,7 @@ edit_virton=Keep interface $1
 edit_virtnone=None
 edit_virtalloc=Create now with IP
 edit_alloc=Create now with allocated IP
+edit_dnsip=External IP address
 edit_return=virtual server details
 edit_users2=Edit Mail and FTP Users
 edit_users3=Edit FTP Users
@@ -1082,6 +1083,7 @@ save_title=Save Server
 save_equota=Missing or invalid total quota
 save_euquota=Missing or invalid administration user's quota
 save_ebwlimit=Missing or invalid bandwidth limit
+save_ednsip=Missing or invalid external IP address
 save_user=Modifying administration user ..
 save_group=Modifying administration group ..
 save_domain=Saving server details ..
@@ -3893,9 +3895,8 @@ spf_ea='$1' is not a valid hostname
 spf_emx='$1' is not a valid domain name
 spf_eip4='$1' is not a valid IP address
 spf_einclude='$1' is not a valid domain name to include
-spf_dnsip=IP address for use in DNS records
 spf_default=Same as real address ($1)
-spf_ednsip=Missing or invalid IP address for DNS records
+spf_default2=Same as real address
 spf_public=DNSSEC public key
 spf_private=DNSEC private key
 
